# Skraepa

./: main.py  pyproject.toml
.streamlit/: config.toml
db/: database.py
llm/: openai_handler.py
scraper/: web_scraper.py
styles/: custom.css
utils/: data_processor.py
